# TriGuard

./: .gitignore  README.md  data.py  eval.py  faithfulness.py  make_tables.py  models.py  plots.py  pyproject.toml  requirements-autoattack.txt  requirements.txt  run_all.py  run_triguard.py  train.py  triguard.py
.github/workflows/: ci.yml
archive/: README.md  legacy_experiments.ipynb
auto_LiRPA/: setup.py
scripts/: 00_install.sh  01_run_main_table.sh  02_run_lambda_ablation.sh  03_run_baseline_sensitivity.sh  04_run_faithfulness.sh  05_make_tables.sh  06_run_pretrained_grid.sh  07_run_certification_sweep.sh  08_run_stats_and_figures.sh  09_run_triguard_train.sh  10_run_triguard_train_ablation.sh  11_build_reference_banks.sh  11_make_triguard_train_artifacts.sh  11_reserve_reference_candidates.sh  12_run_mainconf_workflow.sh  13_run_parallel_training.sh  14_benchmark_primary.sh  15_audit_pair_sampling.sh  _activate_env.sh
tests/: test_results.py  test_scientific_metrics.py  test_stats.py
triguard/: __init__.py  attacks.py  attributions.py  audit_pair_sampling.py  build_references.py  data.py  eval.py  faithfulness.py  make_figures.py  make_tables.py  models.py  plots.py  protocol.py  references.py  reserve_references.py  results.py  stats.py  train.py  verify.py
