[project]
name = "triguard"
version = "0.2.0"
description = "Reference-distribution robustness for Integrated Gradients"
requires-python = ">=3.10,<3.11"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["auto_LiRPA", "archive", "paper/archive"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
